--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "husky": "^5.2.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "postcss-cli": "7.1.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5"
   },
