--- a/deploy/pre/deploy-sherpax-web.yaml
+++ b/deploy/pre/deploy-sherpax-web.yaml
@@ -1,12 +1,12 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: sherpax-web
-  namespace: pre
+  name: sherpax-front
+  namespace: chainx-pre
   labels:
     app: sherpax-web
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
       app: sherpax-web
@@ -16,13 +16,24 @@ spec:
       labels:
         app: sherpax-web
     spec:
+      imagePullSecrets:
+        - name: regcred
       containers:
-        - name: container-sherpax-web-pre
+        - name: container-api-pre
           image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:$BUILD_NUMBER
+          command:
+            - /bin/sh
+            - '-c'
+            - >-
+              cd /usr/share/nginx/html && envsubst < /etc/nginx/nginx.template >
+              /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
           ports:
             - name: http-main
               containerPort: 80
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: aws-config
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
@@ -33,8 +44,6 @@ spec:
       serviceAccountName: default
       serviceAccount: default
       securityContext: {}
-      imagePullSecrets:
-        - name: regcred
       affinity: {}
       schedulerName: default-scheduler
   strategy:
