--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "gatsby-image": "^3.11.0",
     "greensock": "^1.20.2",
     "gsap": "^3.7.1",
     "html-webpack-plugin": "4.0.0-beta.11",
