--- a/deploy/prod/deploy-sherpax-web.yaml
+++ b/deploy/prod/deploy-sherpax-web.yaml
@@ -2,11 +2,11 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: sherpax-web
-  namespace: prod
+  namespace: chainx-prod
   labels:
     app: sherpax-web
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
       app: sherpax-web
@@ -16,25 +16,32 @@ spec:
       labels:
         app: sherpax-web
     spec:
+      imagePullSecrets:
+        - name: regcred
       containers:
-        - name: container-sherpax-web-prod
+        - name: container-api-prod
           image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:$BUILD_NUMBER
+          command:
+            - /bin/sh
+            - '-c'
+            - >-
+              cd /usr/share/nginx/html && envsubst < /etc/nginx/nginx.template >
+              /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
           ports:
             - name: http-main
               containerPort: 80
               protocol: TCP
+          
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
       serviceAccountName: default
       serviceAccount: default
       securityContext: {}
-      imagePullSecrets:
-        - name: regcred
       affinity: {}
       schedulerName: default-scheduler
   strategy:
