--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "cz-customizable": "^6.3.0",
     "husky": "^5.2.0",
     "i18next-browser-languagedetector": "^6.1.2",
+    "k8s-deploy-cli": "^0.1.4",
     "postcss-cli": "7.1.1",
     "postcss-px-to-viewport": "^1.1.1",
     "styled-components": "^5.3.0",
